fix: string formatting in FileUploadSubmissionIntegrationTest